--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-plumber": "^1.0.1",
     "gulp-print": "^1.1.0",
     "gulp-task-listing": "^1.0.0",
+    "gulp-useref": "^1.2.0",
     "gulp-util": "^3.0.5",
     "jshint-stylish": "^2.0.0",
     "wiredep": "^2.2.2",
