--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.7.7",
+    "chai": "^3.0.0",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.6.0",
@@ -52,6 +53,22 @@
     "gulp-useref": "^1.2.0",
     "gulp-util": "^3.0.5",
     "jshint-stylish": "^2.0.0",
+    "karma": "^0.12.36",
+    "karma-chai": "^0.1.0",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-coverage": "^0.4.2",
+    "karma-growl-reporter": "^0.1.1",
+    "karma-mocha": "^0.1.10",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "karma-sinon": "^1.0.4",
+    "lodash": "^3.9.3",
+    "mocha": "^2.2.5",
+    "mocha-clean": "^0.4.0",
+    "node-notifier": "^4.2.3",
+    "phantomjs": "^1.9.17",
+    "sinon": "^1.15.3",
+    "sinon-chai": "^2.8.0",
     "wiredep": "^2.2.2",
     "yargs": "^3.10.0"
   }
