--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "browser-sync": "^2.7.7",
     "chai": "^3.0.0",
     "del": "^1.2.0",
-    "gulp": "^3.9.0",
+    "gulp": "git://github.com/gulpjs/gulp#4.0",
     "gulp-angular-templatecache": "^1.6.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-bump": "^0.3.1",
